--- a/Success.html
+++ b/Success.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> resistration successful</title>
+        <title> registration successful</title>
     </head>
     <body>
         <h2> "REGISTRATION SUCCESSFUL" </h2>
