--- a/FWD Project/Loginpage.html
+++ b/FWD Project/Loginpage.html
@@ -15,7 +15,7 @@ TYPE html>
                 <p>Access your account</p>
             </div>
             
-            <form class="login-form" id="loginForm" novalidate>
+            <form action="LoginServlet" method="post" class="login-form" id="loginForm" novalidate>
                 <div class="form-group">
                     <div class="input-wrapper">
                         <input type="email" id="email" name="email" required autocomplete="email">
@@ -87,5 +87,6 @@ TYPE html>
             <div class="glow-orb glow-orb-3"></div>
         </div>
     </div>
+    
 </body>
 </html>
