--- a/FWD Project/signup.html
+++ b/FWD Project/signup.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Sign Up </h1>
-        <form action="/submit_signup" method="post">
+        <form action="SignupServlet" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required><br><br>
             <label for="shopname">Shop Name:</label>
